updates to change matches from PodExecOptions to Pod/exec
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/block-pod-exec-by-pod-and-container/block-pod-exec-by-pod-and-container.yaml
+++ b/other/block-pod-exec-by-pod-and-container/block-pod-exec-by-pod-and-container.yaml
@@ -21,7 +21,7 @@ spec:
       any:
       - resources:
           kinds:
-          - PodExecOptions
+          - Pod/exec
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
