--- a/other/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
+++ b/other/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
@@ -20,7 +20,7 @@ spec:
       any:
       - resources:
           kinds:
-          - PodExecOptions
+          - Pod/exec
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
