--- a/other/block-pod-exec-by-pod-name/block-pod-exec-by-pod-name.yaml
+++ b/other/block-pod-exec-by-pod-name/block-pod-exec-by-pod-name.yaml
@@ -21,7 +21,7 @@ spec:
       any:
       - resources:
           kinds:
-          - PodExecOptions
+          - Pod/exec
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
