--- a/other/annotate-base-images/annotate-base-images.yaml
+++ b/other/annotate-base-images/annotate-base-images.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Annotate Base Images
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
+    pod-policies.kyverno.io/autogen-controllers: none
     kyverno.io/kyverno-version: 1.7.0
     policies.kyverno.io/minversion: 1.7.0
     kyverno.io/kubernetes-version: "1.23"
