--- a/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
+++ b/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Inject Env Var from Image Label
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
+    pod-policies.kyverno.io/autogen-controllers: none
     kyverno.io/kyverno-version: 1.6.0
     policies.kyverno.io/minversion: 1.7.0
     kyverno.io/kubernetes-version: "1.23"
