--- a/other/check-subjectaccessreview/artifacthub-pkg.yml
+++ b/other/check-subjectaccessreview/artifacthub-pkg.yml
@@ -1,6 +1,6 @@
 name: check-subjectaccessreview
 version: 1.0.0
-displayName: Check ServiceAccount
+displayName: Check SubjectAccessReview
 createdAt: "2023-05-01T00:00:00.000Z"
 description: >-
   In some cases a validation check for one type of resource may need to take into consideration the requesting user's permissions on a different type of resource. Rather than parsing through all Roles and/or ClusterRoles to check if these permissions are held, Kyverno can perform a SubjectAccessReview request to the Kubernetes API server and have it figure out those permissions. This policy illustrates how to perform a POST request to the API server to subject a SubjectAccessReview for a user creating/updating a ConfigMap. It is intended to be used as a component in a more functional rule.
