fix filename reference in test manifest
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/deny-commands-in-exec-probe/kyverno-test.yaml
+++ b/other/deny-commands-in-exec-probe/kyverno-test.yaml
@@ -1,6 +1,6 @@
 name: deny-commands-in-exec-probe
 policies:
-  - cpol.yaml
+  - deny-commands-in-exec-probe.yaml
 resources:
   - resource.yaml
 results:
