--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Go 
         uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9
         with:
-          go-version: 1.20
+          go-version: "1.20"
 
       - name: Test Policy
         run: go run ./cmd/cli/kubectl-kyverno test ../policies
