Update workflow to change the repo destination from kyverno/kyverno to kyverno/policies
Signed-off-by: Haoyu Guo <haoyuguo@usc.edu>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
       - name: Test Policy
         run: go run ./cmd/cli/kubectl-kyverno test ../policies
         working-directory: kyverno
+    
+      - name: Checkout kyverno/policies
+        uses: actions/checkout@v2
+        with:
+          repository: kyverno/policies
       
       - name: Validate all policies
         run: |
