--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,17 +48,26 @@ jobs:
 
           # Loop through each policy directory in the repository
           for policy_dir in $(find "$GITHUB_WORKSPACE" -type d -name '*-*' ! -name '.*' ! -path '*/\.*' ! -name '*_*'); do
-            # Validate that policy is named the same as the folder
+            # Get the name of the directory
             dir_name=$(basename "$policy_dir")
-            # Check if a .yml file with the same name as the directory exists in the directory
+
+            # Check if the directory contains any other directories
+            if find "$policy_dir" -mindepth 1 -type d | read; then
+              # If it does, skip the filename validation
+              continue
+            fi
+
+            # Check if a .yaml file with the same name as the directory exists in the directory
             if [[ ! -f "$policy_dir/$dir_name.yaml" ]]; then
               echo "No file named $dir_name.yaml found in directory $policy_dir"
               exit 1
             fi
+
             # Validate that artifacthub-pkg.yml file is found in the same folder as the policy
             if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]]; then
               echo "artifacthub-pkg.yml file is not found in the same folder as the policy in directory $policy_dir"
               exit 1
             fi
           done
+
 
