--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
           for policy_dir in $(find "$GITHUB_WORKSPACE" -type d -name '*-*' ! -name '.*' ! -path '*/\.*' ! -name '*_*'); do
             # Get the name of the directory
             dir_name=$(basename "$policy_dir")
-            
+
             # Check if the directory name only contains alphanumeric characters and dashes
             if [[ ! $dir_name =~ ^[a-zA-Z0-9-]+$ ]]; then
               echo "Directory $dir_name contains invalid characters. Only alphanumeric characters and dashes are allowed."
@@ -63,17 +63,15 @@ jobs:
               continue
             fi
 
-            # Check if a .yaml file with the same name as the directory exists in the directory
-            if [[ ! -f "$policy_dir/$dir_name.yaml" ]]; then
-              echo "No file named $dir_name.yaml found in directory $policy_dir"
+            # Check if a .yml or .yaml file with the same name as the directory exists in the directory
+            if [[ ! -f "$policy_dir/$dir_name.yml" ]] && [[ ! -f "$policy_dir/$dir_name.yaml" ]]; then
+              echo "No .yml or .yaml file named $dir_name found in directory $policy_dir"
               exit 1
             fi
 
-            # Validate that artifacthub-pkg.yml file is found in the same folder as the policy
-            if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]]; then
-              echo "artifacthub-pkg.yml file is not found in the same folder as the policy in directory $policy_dir"
+            # Validate that artifacthub-pkg.yml or artifacthub-pkg.yaml file is found in the same folder as the policy
+            if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]] && [[ ! -f "$policy_dir/artifacthub-pkg.yaml" ]]; then
+              echo "artifacthub-pkg.yml or artifacthub-pkg.yaml file is not found in the same folder as the policy in directory $policy_dir"
               exit 1
             fi
           done
-
-
