--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,11 @@ jobs:
 
           # Loop through each policy directory in the repository
           for policy_dir in $(find "$GITHUB_WORKSPACE" -type d ! -name '.*' ! -path '*/\.*'); do
+            # Skip the root directory
+            if [[ "$policy_dir" == "$GITHUB_WORKSPACE" ]]; then
+              continue
+            fi
+            
             # Skip directories that contain subdirectories
             if find "$policy_dir" -mindepth 1 -type d | read; then
               # If it does, skip the filename validation
